# scholawrite-augmented

augmented/: .gitignore  README.md  pyproject.toml  run_final_stages.sh
augmented/configs/: academic_markers.json  calibrated_params.json  discourse_markers.json  leakage_patterns.json  lexical_substitutions.json  meta_commentary_patterns.json  openrouter_models.json  placeholder_text.json  sensory_anchors.json
augmented/docs/: ARCHITECTURE_DECISIONS.md  ATTRIBUTION_AND_LICENSE.md  CI.md  DATA_CARD.md  ETHICS.md  EVALUATION.md  GOLD_SUBSET.md  INJECTION_LEVELS.md  LABEL_TAXONOMY.md  PROTOCOL.md  README.md  README_RELEASE.md  REPRODUCIBILITY.md  TERMINOLOGY.md  THRESHOLDS.md  TRAJECTORIES.md
augmented/scholawrite/: __init__.py  agentic.py  annotations.py  anomalies.py  augment.py  banner.py  baselines.py  causal_core.py  cli.py  config.py  embodied.py  generators.py  harm.py  ids.py  injection.py  io.py  labels.py  metrics.py  models.py  openrouter.py  prompts.py  schema.py  text.py  time.py  trajectories.py  visualization.py
augmented/scripts/: build_augmented_dataset.py  build_complete_dataset.py  calibrate_simulation.py  check_models.py  demo_causal_signatures.py  env_capture.py  evaluate_suite.py  generate_anomalies.py  generate_injections.py  hash_artifacts.py  iaa_compute.py  ingest_seed.py  lint_data.py  pii_scan.py  prepare_gold_subset.py  record_failures.py  run_all.sh  run_baselines.py  run_harm.py  scholawrite_cli.py  smoke_test.py  validate_annotations.py  validate_splits.py  visualize_trajectories.py
augmented/tests/: test_annotations.py  test_anomalies.py  test_architecture.py  test_augment.py  (+11 more)
(+5 files in other folders)
